--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
     "@electron/remote": "^2.0.8",
     "glasstron": "^0.1.1"
   },
-  "name": "com.cot.framework.desktop",
+  "name": "com.cot.wallpaper.desktop",
   "version": "1.0.0",
-  "description": "Basic desktop framework for Cot Applications",
+  "description": "Change wallpaper from online site automatically.",
   "main": "index.js",
   "devDependencies": {
     "electron": "^19.0.4",
@@ -13,19 +13,19 @@
   },
   "scripts": {
     "start": "electron .",
-    "build": " electron-packager . Cot-Desktop-Application-Framework --platform=win32 --icon=icon.ico --app-version=1.0.0 --overwrite --out=../build"
+    "build": " electron-packager . Cot-Online-Wallpaper --platform=win32 --icon=icon.ico --app-version=1.0.0 --overwrite --out=../build"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/cotzhang/Desktop-Application-Framework.git"
+    "url": "git+https://github.com/cotzhang/COW_Cot-Online-Wallpaper.git"
   },
   "keywords": [
-    "cot"
+    "cot","wallpaper"
   ],
   "author": "Cot Zhang",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/cotzhang/Desktop-Application-Framework/issues"
+    "url": "https://github.com/cotzhang/COW_Cot-Online-Wallpaper/issues"
   },
-  "homepage": "https://github.com/cotzhang/Desktop-Application-Framework#readme"
+  "homepage": "https://github.com/cotzhang/COW_Cot-Online-Wallpaper#readme"
 }
